updated to version 5.2.03

--- a/app-literature.tex
+++ b/app-literature.tex
@@ -11,11 +11,13 @@ OpenGeoSys -- scientific software for coupled processes in porous media,
 \bibitem{ogs06}
 OgenGeoSys-Wiki: Source code, current projects, presentations and much more. \texttt{https://svn.ufz.de/ogs/}
 \bibitem{ogs03}
-Rink K, Kalbacher T, Kolditz O: Visual Data Exploration for Hydrological Analysis. \textit{Environ Earth Sci,} \textit{(in revision)}
+Rink K, Kalbacher T, Kolditz O: Visual Data Exploration for Hydrological Analysis. \textit{Environ Earth Sci,} DOI:10.1007/s12665-011-1230-6
+\bibitem{ogs07}
+Rink K, Fischer T, Kolditz O: Data Visualisation and Validation for Hydrological Models. \textit{Proc. of International Conference on Computer Graphics, Visualization, Computer Vision and Image Processing (CGVCVIP),} pages 169--176
 \bibitem{ogs01}
 Wang W, Kolditz O: Object-oriented finite element analysis of thermo-hydro-mechanical (THM) problems in porous media.
 \textit{Int J Numer Meth Engng,} \textbf{69:}162--201 (2007)
 \bibitem{ogs02}
 Wang W, Kosakowski G, Kolditz O: A parallel finite element scheme for thermo-hydro-mechanical (THM) coupled problems in porous media \textit{Comput Geosci,} \textbf{35(8):}1631--1641 (2009)
 
-\end{thebibliography}
+\end{thebibliography} 
