--- a/ch04-visualisation.tex
+++ b/ch04-visualisation.tex
@@ -112,7 +112,12 @@ All available filters will be detailed in the following.
 \subsubsection{Extract cells by threshold}
 \bstart{Applicable to:} Lines, Surfaces, Meshes
 
-\bstart{Effect:} Each line, surface and mesh layer has a unique ID which allows to assign different colours to different objects. This filter furthermore allows to select a range of objects which should be displayed while all other objects are blanked out. This way you can visualise only a specified stratigraphic layer or a certain polyline, etc. See figures \ref{Filter-Poly4} and \ref{Filter-Mesh3}.
+\bstart{Effect:} Each line, surface and mesh layer has a unique ID which allows to assign different colours to different objects. This filter furthermore allows to select a range of objects which should be displayed while all other objects are blanked out. This way you can visualise only a specified stratigraphic layer or a certain polyline, etc. See figures \ref{Filter-Poly4} and \ref{Filter-Mesh3}. The filter is always applied to the currently selected scalar array. For instance, given a mesh containing scalar arrays for material group and groundwater head, this filter may be used to select a range of materials (e.g. only materials with IDs 5--7) or regions with a certain groundwater head (e.g. $\text{head}>7.2$).
+
+\subsubsection{Generate contours based on scalar fields}
+\bstart{Applicable to:} Meshes
+
+\bstart{Effect:} Given a scalar field this filter will output contour lines of meshes containing 2D elements and contour surfaces for meshes containing 3D elements. The number of contours that should be displayed can be defined in the filter properties as well as the minimum and maximum value for the calculated contours. The chosen number of contours will that be calculated on the selected scalar field in equidistant intervals between the chosen minimum and maximum value. The colours of the contours are automatically chosen based on these scalar values.
 
 \subsubsection{Image to bar chart}
 \bstart{Applicable to:} Image Data
