added info on feflow interface

--- a/ch02-workflow.tex
+++ b/ch02-workflow.tex
@@ -51,7 +51,7 @@ This interface is in an unfinished state. However, there exists a programming in
 \item \textbf{NetCDF} files (*.nc, *.cdf)\\
 A machine-independent format that contains all kinds array-oriented scientific data. This interface works only under certain circumstances and you should probably talk to the development team if you want to load netCDF files into OGS.
 \item \textbf{FEFLOW} files\\
-Allows the import of FEFLOW geometry and meshes.
+Allows the import FEFLOW problem ASCII files (*.fem). This interface imports only geometry, e.g. polygons, and meshes.
 \item \textbf{Petrel} files\\
 This interface is in an unfinished state. Please talk to the development team if you need to load data into OGS.
 \item \textbf{Raster} files (*.asc, *.bmp, *.jpg, *.png, *.tif)\\
