--- a/ch02-workflow.tex
+++ b/ch02-workflow.tex
@@ -4,27 +4,33 @@
 
 \subsection{Native File Formats}
 \label{nativefileformats}
+\index{File formats}
 
 \ogs has a large number of native file formats for storing geometrical data (*.gli), meshes (*.msh), processes (*.pcs), FEM conditions (such as boundary conditions (*.bc)) and material properties (e.g. fluid properties (*.mfp)) and many more.
 
 Not all of them can be loaded into the user interface since not all of them contain data that can be visualised. Things are additionally made difficult as the file standards for the programm are currently changed to XML files\footnote{http://www.w3.org/XML/}. For this reason there exists -- at least at the time of this writing -- two file standards for certain kinds of objects. Hopefully, this unfortunate situation is resolved soon.
 
-You can open native OGS files by clicking \cmd{File\ra Open...}. Supported native \ogs formats are:
+You can open native OGS files by clicking \cmd{File\ra Open...}\index{Loading geometry}\index{Loading meshes}. Supported native \ogs formats are:
 \begin{itemize}
-\item Geometrical data files (*.gli)\\
+\item Geometrical data files (*.gli)\index{Geometry}\\
     Containing geometrical data such as points, polylines and surfaces (in this file format surfaces are defined by closed polylines and are therefore always describing planes).
 \item Geometrical XML data files (*.gml)\\
     Containing geometrical data such as points, polylines and surfaces (in this file format surfaces are triangulated and can therefore describe any kind of surface).
-\item Observation sites (*.stn)\\
+\item Meshes (*.msh)\index{Meshes}\\
+    Domain discretisation in 2D or 3D. Each mesh contains a set of nodes (points) as well as a set of elements defined by a subset of these nodes. A mesh may contain different kinds of elements. OGS supports the following element types\index{Element types}: lines, triangles, quadrilaterals, tetrahedra, hexahedra, pyramids, prisms.\\
+    Meshes may be classified into structured or unstructured meshes. Note, that \ogs treats all meshes as unstructured.
+\item Observation sites (*.stn) \index{Stations}\index{Boreholes}\\
     XML file format containing information for observation stations as well as boreholes. The files also describe points in space but with additional information (such as stratigraphic information for boreholes). Also, this data is visualised in a different way.
-\item Mesh files (*.msh) containing structured or unstructured grids.
-\item \ogs project files (*.gsp)\\
+\item \ogs project files (*.gsp)\index{Project files}\\
     XML file format for \ogs projects. These files contain files related to a given project. All of these files will be loaded upon loading the *.gsp file. This is especially useful for projects consisting of a large number of input files.
 \end{itemize}
 
-Additionally, right-clicking on any geometry in the data view will give you the option \cmd{Add FEM Condition...} which allows you to load FEM condition files in ASCII (*.bc, *.ic, *.st) or XML-format (*.cnd). These files describe initial and boundary conditions as well as source terms that are associated with pre-defined geometrical objects (points, polylines, surfaces) with additional information important for a subsequent simulation. Currently (as of version 5.2.03) most FEM Conditions will be correctly displayed in the data view and render window. As an alternative, you may add source terms of the process distribution ``DIRECT'' directly on meshes (again, via right-clicking on a mesh) and the conditions will then be displayed on the respective mesh nodes defined in the input file. For the visualisation, the correct scalar values in the render window will currently only be displayed for process distribution types ``CONSTANT'' and ``LINEAR''.\footnote{For an overview over what process distribution types are, which types are supported by the system and how they influence a subsequent simulation please refer to technical documentation of \ogs.}
+Additionally, right-clicking on any geometry in the data view will give you the option \cmd{Add FEM Condition...} which allows you to load FEM condition files in ASCII (*.bc, *.ic, *.st)\index{Loading FEM conditions} or XML-format (*.cnd). These files describe initial and boundary conditions as well as source terms that are associated with pre-defined geometrical objects (points, polylines, surfaces) with additional information important for a subsequent simulation. FEM conditions can also be loaded via \cmd{File\ra Open...}. Upon loading it is then checked if a corresponding geometry for these conditions is available. For XML-files this geometry is saved in the cnd-file, for old file types it is simply assumed that the geometry name will be the same as the name of the condition-file. If no geometry of this name is found, the data will not be loaded.
+
+As an alternative, you may add source terms of the process distribution ``DIRECT'' directly on meshes nodes (again, via right-clicking on a mesh) and the conditions will then be displayed on the respective mesh nodes defined in the input file. For the visualisation, the correct scalar values in the render window will currently only be displayed for process distribution types ``CONSTANT'', ``LINEAR'' and ``DIRECT''.\footnote{For an overview over what process distribution types are, which types are supported by the system and how they influence a subsequent simulation please refer to technical documentation of \ogs.}
 
 \subsection{Import File Formats}
+\index{Import file formats}
 
 \begin{figure}[tb]
 \begin{center}
@@ -40,27 +46,30 @@ Depending of which file format you want to load, quality of the interface varies
 
 Currently the following file formats are supported:
 \begin{itemize}
-\item ESRI \textbf{shape} files (*.shp)\\
+\item ESRI \textbf{shape} files (*.shp)\index{Shape files}\\
 Vector files specifying points, polylines and polygons. The interface for shape files is thoroughly tested and there should be no problems whatsoever. However, note that a lot shape files come with a database file containing additional information (*.dbf) which has no standardised table structure and therefore is not analysed or imported by the data explorer.
-\item Aquaveo \textbf{GMS} files (*.txt, *.3dm)\\
+\item Aquaveo \textbf{GMS} files (*.txt, *.3dm)\index{GMS files}\\
 Text or mesh files specifying boreholes (*.txt) or layered meshes build from tetrahedrons and prisms. This interface has been tested with number of cases and should work fine.
-\item \textbf{GMSH} files (*.msh)\\
+\item \textbf{GMSH} files (*.msh)\index{GMSH files}\\
 Mesh files containing unstructured grids. As an exception these files are \emph{not} loaded via the import menu but you have to load them directly via \cmd{File\ra Open...}. The interface should work perfectly however.
-\item \textbf{GoCAD} files (*.ts)\\
+\item \textbf{GoCAD} files (*.ts)\index{GoCAD files}\\
 This interface is in an unfinished state. However, there exists a programming interface to write OGS-files directly from GoCAD. Please talk to the development team if you need to load data into OGS.
-\item \textbf{NetCDF} files (*.nc, *.cdf)\\
-A machine-independent format that contains all kinds array-oriented scientific data. This interface works only under certain circumstances and you should probably talk to the development team if you want to load netCDF files into OGS.
-\item \textbf{FEFLOW} files\\
+\item \textbf{NetCDF} files (*.nc, *.cdf)\index{NetCDF files}\\
+A machine-independent format that contains all kinds array-oriented scientific data. This interface currently only works under certain circumstances and you should probably talk to the development team if you want to load netCDF files into OGS. The result will be a mesh with data values from the netCDF files assigned on the elements. (The workflow is similar to creating meshes from images/rasters, see section \ref{meshraster})
+\item \textbf{FEFLOW} files\index{FEFLOW files}\\
 Allows the import FEFLOW problem ASCII files (*.fem). This interface imports only geometry, e.g. polygons, and meshes.
-\item \textbf{Petrel} files\\
+\item \textbf{Petrel} files\index{Petrel files}\\
 This interface is in an unfinished state. Please talk to the development team if you need to load data into OGS.
-\item \textbf{Raster} files (*.asc, *.bmp, *.jpg, *.png, *.tif)\\
+\item \textbf{Raster} files (*.asc, *.bmp, *.jpg, *.png, *.tif)\index{Raster files}\index{Images}\\
 Image data files that may contain satellite images, etc. Ascii raster files (*.asc) and GeoTIFF (*.tif) files contain geo-referenced data, while common image files (*.bmp, *.jpg, *.png) do not. This interface should work perfectly although it can be quite slow for large raster files.
-\item Visual Toolkit (\textbf{VTK}) files (*.vti, *.vtk, *.vtp, *.vtr, *.vts, *.vtu)\\
+\item \textbf{TetGen} files\index{TetGen files}\\
+Allows the import files created with the TetGen mesh generator. This interface currently only reads the node- and tetrahedra-files created by the software (i.e. *.node and *.ele).
+\item Visual Toolkit (\textbf{VTK}) files (*.vti, *.vtk, *.vtp, *.vtr, *.vts, *.vtu)\index{VTK files}\\
 Files containing data for graphic objects, ranging from image files (*.vti) to structured (*.vts) or unstructured meshes (*.vtu). All data sets may include additional data in the form of scalar arrays. This interface should work perfectly.
 \end{itemize}
 
 \subsection{Removal of Data}
+\index{Removing data}
 
 You can remove all data loaded into \ogs by right-clicking the data set in its respective data view and selected \cmd{Remove data}. Specifically you can also remove only polylines or surfaces only from a geometry. The only exception to this rule are geometric points which can only be removed if both surfaces and polylines are already deleted as both kinds of objects are dependent on points. Regardless of the previous remarks you can also remove geometries as whole.
 
@@ -70,14 +79,16 @@ You can remove all data loaded into \ogs by right-clicking the data set in its r
 Technically, data (or a representation thereof) loaded into the programme is displayed at three different locations (see figure \ref{fig:gui}):
 
 \subsection{Data Views}
+\index{DataView}
 
-There are four different DataView-Tabs in the programme where the data is visible in the form of lists. Which of the tabs is used depends on the data. There is one tab for geometrical information, one for meshes, one for stations (i.e. observation sites) and one for FEM conditions (i.e. boundary conditions, etc.)
+There are four different DataView-Tabs in the programme where the data is visible in the form of lists. Which of the tabs is used depends on the data. There is one tab for geometrical information, one for meshes, one for stations (i.e. observation sites) and one for Modelling information (i.e. processes, boundary conditions, etc.)
 
-The DataView for geometrical information contains a list of geometries. Each geometry-item has up to three children titled ``Points'', ``Polylines'' and ``Surfaces'' containing the information about the respective geometrical objects. For example, the item `Points' contains a list of points and for each item (i.e. each point) its index, the coordinates and (if existing) the name of the object can be displayed. Each geometry \emph{needs} to contain a list of points. Other geometrical objects (i.e. polylines or surfaces) are optional.
+The DataView for geometrical information contains a list of geometries. Each geometry-item has up to three children titled ``Points'', ``Polylines'' and ``Surfaces'' containing the information about the respective geometrical objects. For example, the item `Points' contains a list of points and for each item (i.e. each point) its index, the coordinates and (if existing) the name of the object can be displayed. Each geometry \emph{needs} to contain a list of points. Other geometrical objects (i.e. polylines or surfaces) are optional. Upon selecting a geometrical object in the DataView, the object will also be highlighted\index{Highlighting objects} in the render window. For better visibility a point will be marked by a small ball, a line by a tube.
 
-Note, that the mesh-tab is subdivided into a few of the meshes loaded into the programme (and the elements contained within each mesh) and a second window called ``Element Properties''. If you pick any element from the render window, all available information concerning that element (such as nodes, volume, element type, etc.) will be displayed here. For more information on how to pick mesh elements, see the next section.
+Note, that the mesh-tab is subdivided into a view of the meshes loaded into the programme (and the elements contained within each mesh) and a second window called ``Element Properties''. If you pick any element from the render window, all available information concerning that element (such as nodes, volume, element type, etc.) will be displayed here. For more information on how to pick mesh elements, see the next section.
 
 \subsection{Render Window}
+\index{Render window}
 
 \begin{figure}[tb]
 \begin{center}
@@ -91,13 +102,18 @@ The render window is the part of the GUI where all the data is visualised in a u
 
 One of the big advantages of the Data Explorer is in the fact that this visual inspection of the data also allows you to assess your data and to find inconsistencies and errors. Figure \ref{fig:error} gives examples of such inconsistencies.
 
-You can manipulate the 3d view by using the mouse. Holding the left mouse button and moving the mouse rotation the view point around the focal point of the scene (by default this is the center point of your data). By holding the middle mouse button you can pan the view which means you translate left / right and up / down. By holding the right mouse button or moving the mouse wheel you can zoom in and out.
+You can manipulate the 3d view by using the mouse. Holding the left mouse button and moving the mouse will rotate\index{Rotating} everything around the focal point of the scene (by default this is the center point of your data). By holding the middle mouse button you can pan the view which means you translate\index{Translation} left / right and up / down. By holding the right mouse button or moving the mouse wheel you can zoom\index{Zooming} in and out.
 
-There is alternative mouse button functionality assignment which is activated by holding the Spacebar. When activated, left clicks pick a cell of the actually selected visualisation pipeline object. This allows to mark a certain cell of the visualisation, such as the selection of a mesh element for displaying information related to that element. On right clicking the picked position is set as the focal point of the camera. This is useful for a better examination of an interesting region of the data so with focal point set to that region you can easily rotate and zoom around.
+There is alternative mouse button functionality assignment which is activated by holding the Spacebar. When activated, left clicks pick\index{Picking} a cell of the actually selected visualisation pipeline object. This allows to mark a certain cell of the visualisation, such as the selection of a mesh element for displaying information related to that element. On right clicking the picked position is set as the focal point of the camera. This is useful for a better examination of an interesting region of the data so with focal point set to that region you can easily rotate and zoom around.
 
 You can deselect the cell by holding Spacebar and clicking somewhere into the background of the render window.
 
+\bigskip
+
+Note, that you can make screenshots\index{Screenshots} of the content of the render window at any time. Simply press the \cmd{Screenshot}-button located above the render window and a small dialog will open that allows you to select the scaling factor of the image. This is useful for creating large image (e.g. for posters) without artefacts.
+
 \subsection{Visualization Pipeline}
+\index{Visualization pipeline}
 
 The visualisation pipeline looks very similar to the data views described above. However, the items displayed in this tab are a list of the graphical objects displayed (rendered) in the render window. For further reference these will be called \emph{visualisation items}. Each visualisation item has a checkbox beside its name that determines if the object is displayed in the render window or not. You can check or uncheck this box at any time, no data is lost if you uncheck it.
 
@@ -108,11 +124,13 @@ For each data set loaded into the programme one or more visualisation items are 
 Section \ref{filters} explains how you can employ the visualisation pipeline to apply filters the visualisation items. These filters allow changes of the way each object is visualised and they are quite handy to show certain aspects of the data.
 
 \section{Writing Data...}
+\index{Saving data}
 
 \subsection{Native Files}
 You can save geometries, observation sites and meshes by right-clicking them in the Data View and selecting \cmd{Save data...}. You can also save all loaded data files by saving an \ogs project. Select \cmd{File\ra Save as...} and specify a project name. This option will save all geometries in *.gml files, all mesh meshes in *.msh files and all observation sites in *.stn files. Additionally it will create a project file (*.gsp). When loading the gsp-file later on it will also load the respective geometries and observation sites again. (Note: Other file formats -- e.g. for boundary conditions or processes -- will be added in the future)
 
 \subsection{Export to Other Formats}
+\index{Export formats}
 
 Any geometric data loaded into \ogs can be exported into a GMSH *.geo file via \cmd{File\ra Save as...} and selecting ``GMSH gemetry files'' as the output format. Note, that this will merge all geometries loaded into the programme and that it will also save station-data as points (i.e. you lose any additional information associated with these stations). Before saving, the geometric information will be inserted into a quad tree structure to analyse the data and insert additional points (so-called `Steiner Points') at locations where not enough information for generation of a suitable mesh exists. This ensures the creation of an adequate result when meshing the geo-file within GMSH.\footnote{Note that this allows you to export any combination of data into GMSH format for subsequent meshing. The functionality described in section \ref{meshcreation} for meshing of data within \ogs requires a ``bounding polygon'' that serves as outer boundary of all the data contained within the mesh.}
 
