--- a/ch04-visualisation.tex
+++ b/ch04-visualisation.tex
@@ -1,12 +1,13 @@
 \chapter{Visualisation}
 
 \section{Visualisation Properties}
+\index{Visualisation setttings}
 
 You can change some properties of the render window by clicking \cmd{Settings\ra} \cmd{Visualisation Settings...}. The dialog that opens allows you to change the background colour of the render window as well as some small changes concerning the illumination of the scene.
 
 For any rendered scene a light source has to be specified (basically the equivalent to the sun or a lamp in the room). Per default this light source is identical with the viewer, i.e. the light source always illuminated the part of an object in the render window that can be seen by the user. In some cases this illumination is not enough, though, and certain parts of a rendered object may be shrouded in darkness. Therefore it is possible to switch on additional light sources above and below the object to ensure a full illumination of the scene.
 
-A global superelevation factor can be applied to all root objects in the visualisation pipeline. This overwrites all previously set superelevation factors. This is especially useful when dealing with a large number of files, all of which should be assigned the same superelevation factor (e.g. when using \ogs projects, see section \ref{nativefileformats}).
+A global superelevation\index{Superelevation} factor can be applied to all root objects in the visualisation pipeline. This overwrites all previously set superelevation factors. This is especially useful when dealing with a large number of files, all of which should be assigned the same superelevation factor (e.g. when using \ogs projects, see section \ref{nativefileformats}).
 
 Per default on loading new data the 3D view is adapted to show the entire scene. This can be switched of by unchecking the ``Reset view on load'' option. This might be useful when making a series of screenshots with the exact same point of view.
 
@@ -27,12 +28,23 @@ For each object in the visualisation pipeline there a number of parameters that 
 In detail these parameters are:
 
 \begin{itemize}
-\item Diffuse Color: Each item is assigned a colour which is used for rendering the object in 3D space. This colour can be changed here (see figure \ref{colour-solid}).
-\item Active Scalar: Each visualisation object has an assigned colour which is used in the rendering process (see above). However, some data sets contain additional information (e.g. material groups for meshes, concentration of chemical substances, etc.). This information can be selected here and is then employed in the rendering of object in the render window (see figure \ref{colour-default}).
-\item Visible Edges: Some objects (such as meshes) are composed of a combination of lines (edges) and surfaces. While the colour of the surfaces can be set using the \emph{Diffuse Color}-button, the colour of the edges can be changed here. Furthermore the rendering of edges can be switched off by unchecking the box next this option.
-\item Opacity: Determines if an object appears to be transparent or not.
-\item Scaling Factor: Super-elevates the data by the given factor. This makes it much more easy to recognise differences in height.
+\item \textbf{Diffuse Color:}\index{Changing Colour} Each item is assigned a colour which is used for rendering the object in 3D space. This colour can be changed here (see figure \ref{colour-solid}).
+\item \textbf{Active Scalar:}\index{Changing scalar values} Each visualisation object has an assigned colour which is used in the rendering process (see above). However, some data sets contain additional information (e.g. material groups for meshes, concentration of chemical substances, etc.). This information can be selected here and is then employed in the rendering of object in the render window (see figure \ref{colour-default}).
+\item \textbf{Visible Edges:}\index{Edges} Some objects (such as meshes) are composed of a combination of lines (edges) and surfaces. While the colour of the surfaces can be set using the \emph{Diffuse Color}-button, the colour of the edges can be changed here. Furthermore the rendering of edges can be switched off by unchecking the box next this option.
+\item \textbf{Opacity:}\index{Opacity}\index{Transparency} Determines if an object appears to be transparent or not.
+\item \textbf{Scaling Factor:}\index{Scaling} Super-elevates the data by the given factor. This makes it much more easy to recognise differences in height.
+\item \textbf{Translation:}\index{Translation} Any data set can be moved in x, y or z-dimension so data sets can be set in relation to each other for comparison or layered visualisation.
 \end{itemize}
+
+In addition, there are a number of visualisation options applied to the whole scene. These are activated via buttons above the render window and include
+
+\begin{itemize}
+\item \textbf{Show All:} Rotates the scene into the (x,y)-plane and zooms to a point where the whole scene is visible.
+\item \textbf{Zoom:}\index{Zoom} If this button is activated pressing the left mouse button will draw a square into which the programme will zoom upon releasing the button. If the button is deactivated again, the left mouse button will again rotate the scene.
+\item \textbf{Highlight:}\index{Bounding Box} If this button is activated, a bounding box will be drawn for the object currently selected in the Visualization Pipeline.
+\item \textbf{Ortho:}\index{Projection}\index{Orthographic Projection}\index{Perspective Projection} This button causes a orthographic projection of the scene (i.e. objects in the distance will \emph{not} appear smaller). If it is deactivated again, the projection will use perspective again.
+\end{itemize}
+
 
 \section{Object-specific Visualisation Options}
 \label{specvisoptions}
@@ -41,14 +53,13 @@ There are a number of options that are available only for certain types of data.
 
 \begin{itemize}
 \item \textbf{Add filter...:} Allows to apply a filter to the current objects. For details on that option see section \ref{filters}.
-\item \textbf{Add color table...:} Allows you to assign a specific colour table to the currently selected scalar array. The colour table is loaded from a *.lut-file (see figure \ref{colour-user}).\\
+\item \textbf{Add color table...:}\index{Colour lookup tables} Allows you to assign a specific colour table to the currently selected scalar array. The colour table is loaded from a *.lut-file (see figure \ref{colour-user}).\\
     This option is available for all objects except image data.
 \item \textbf{Convert to Mesh...:} Allows to convert an object of the VTK-data type ``Unstructured Grid'' to be converted into an \ogs mesh. Objects of that type are basically meshes that are contained in different data structure than ``normal'' \ogs meshes. Therefore, this specifically allows the conversion of imported VTK-files to \ogs meshes.\\
     This option is available for all objects of type ``VTK\_UN\-STRUCT\-URED\_GRID'' (i.e. all mesh objects).
-\item \textbf{Convert Image to Mesh...:} Generates an \ogs mesh based on a given raster file. Specifically, the result is mesh built from rectangular equilateral triangle elements, with two triangles forming on square (this is basically a representation of the pixels of the raster file). If the raster file contains ``NoData''-values (e.g. raster files created with a Geographic Information System), these values are ignored. See figure \ref{Filter-Img4}.\\
-    This options is only available for image data (i.e. raster files).
-\item \textbf{Export to VTK:} All objects displayed the render window are technically VTK-objects. Choosing this option saves these objects in VTK-format to a file. They can then be used in any software supporting this format (e.g. Paraview\footnote{http://www.paraview.org/}).
-\item \textbf{Export to OpenSG:} Converts objects into OpenSG format (*.osg). This is another open source graphics format. It is also the format used by the UFZ VisLab. Specifically, this also implies that \emph{anything} that can be visualised in \ogs can also be exported to OpenSG and be presented in the VisLab.
+\item \textbf{Convert Image to Mesh...:} Generates an \ogs mesh based on a given raster file. See figure \ref{Filter-Img4}. For more information, see section \ref{meshraster}. This options is only available for image data (i.e. raster files).
+\item \textbf{Export to VTK:}\index{VTK export} All objects displayed the render window are technically VTK-objects. Choosing this option saves these objects in VTK-format to a file. They can then be used in any software supporting this format (e.g. Paraview\footnote{http://www.paraview.org/}).
+\item \textbf{Export to OpenSG:}\index{OpenSG export} Converts objects into OpenSG format (*.osg). This is another open source graphics format. It is also the format used by the UFZ VisLab. Specifically, this also implies that \emph{anything} that can be visualised in \ogs can also be exported to OpenSG and be presented in the VisLab.
 \end{itemize}
 
 \section{Applying Filters for Visualisation}
@@ -56,7 +67,7 @@ There are a number of options that are available only for certain types of data.
 
 In contrast to the options detailed in the previous section, filters are a manipulation of the actual graphics object to enhance, reduce or deform certain aspects of these objects for imparting information that might not be superficial\footnote{One might argue that this definition also holds true for the assignment of specific color tables which is accessed via right-click on an object. This inconsistency originates in the data structures the objects are stored in and in defining an easy-to-use workflow for using this functionality.}.
 
-To apply a filter, right-click on an object in the visualisation pipeline and select \cmd{Add filter...}. A dialog will pop up which lets you select one of a number of available filters. As before, filters will only be displayed for objects they can be applied to. However, this does not mean that it makes sense to apply any filter to any object where it can be applied. Also note, that it is possible (and sometimes useful) to apply filters to filters to extract certain information bit by bit.
+To apply a filter, right-click on an object in the visualisation pipeline and select \cmd{Add filter...}.\index{Adding filters}\index{Filter} A dialog will pop up which lets you select one of a number of available filters. As before, filters will only be displayed for objects they can be applied to. However, this does not mean that it makes sense to apply any filter to any object where it can be applied. Also note, that it is possible (and sometimes useful) to apply filters to filters to extract certain information bit by bit.
 %
 \begin{figure}[tb]
 \begin{center}
@@ -88,6 +99,7 @@ All available filters will be detailed in the following.
 \end{figure}
 
 \subsubsection{Apply texture to surface}
+\index{Textures}
 \bstart{Applicable to:} Surfaces, Meshes
 
 \bstart{Effect:} Allows to map an image/raster on a surface or mesh. This might be additional information such as land use classes, precipitation, etc. See figure \ref{Filter-Mesh4}.
@@ -110,11 +122,13 @@ All available filters will be detailed in the following.
 \end{figure}
 
 \subsubsection{Extract cells by threshold}
+\index{Threshold filter}
 \bstart{Applicable to:} Lines, Surfaces, Meshes
 
 \bstart{Effect:} Each line, surface and mesh layer has a unique ID which allows to assign different colours to different objects. This filter furthermore allows to select a range of objects which should be displayed while all other objects are blanked out. This way you can visualise only a specified stratigraphic layer or a certain polyline, etc. See figures \ref{Filter-Poly4} and \ref{Filter-Mesh3}. The filter is always applied to the currently selected scalar array. For instance, given a mesh containing scalar arrays for material group and groundwater head, this filter may be used to select a range of materials (e.g. only materials with IDs 5--7) or regions with a certain groundwater head (e.g. $\text{head}>7.2$).
 
 \subsubsection{Generate contours based on scalar fields}
+\index{Contour filter}
 \bstart{Applicable to:} Meshes
 
 \bstart{Effect:} Given a scalar field this filter will output contour lines of meshes containing 2D elements and contour surfaces for meshes containing 3D elements. The number of contours that should be displayed can be defined in the filter properties as well as the minimum and maximum value for the calculated contours. The chosen number of contours will that be calculated on the selected scalar field in equidistant intervals between the chosen minimum and maximum value. The colours of the contours are automatically chosen based on these scalar values.
@@ -136,16 +150,19 @@ All available filters will be detailed in the following.
 \bstart{Remarks:} \emph{This is a filter that is needed for the correct application of other filters. It is probably not of much use on itself.}
 
 \subsubsection{Lines to tubes}
+\index{Tube filter}
 \bstart{Applicable to:} Geometry, Observation sites
 
 \bstart{Effect:} A geometric line has independent of the current zoom level always a thickness of $1$. This filter allows to assign a `real' thickness to line-objects that also changes according to the current zoom. See figure \ref{Filter-Poly3}.
 
 \subsubsection{Points to spheres}
+\index{Sphere filter}\index{Glyph ilter}
 \bstart{Applicable to:} Geometry, Observation sites
 
 \bstart{Effect:} A geometric point has independent of the current zoom level always a diameter of $1$. This filter allows to assign a `real' diameter to point-objects that also changes according to the current zoom. See figure \ref{Filter-Poly2}.
 
 \subsubsection{Surface filter}
+\index{Surface filter}
 \bstart{Applicable to:} Meshes
 
 \bstart{Effect:} Extracts the outer surface of a mesh.
