--- a/ogsde-man.tex
+++ b/ogsde-man.tex
@@ -7,6 +7,7 @@
 \usepackage{color}            % enables use of colour for text
 \usepackage{subfig}           % enables subfigures
 \usepackage{amsmath}          % the one and only AMS-Math
+\usepackage{makeidx}          % creating an index
 
 % ----------------------------------------------------------
 % My own commands
@@ -76,6 +77,8 @@
 \setlength{\fboxsep}{0mm}
 \linespread{1.10}
 
+\makeindex
+
 \hyphenation{know-ledge}
 
 % ----------------------------------------------------------
@@ -91,7 +94,7 @@
 \begin{tabbing}
 
 \hspace*{14cm}\=aa\kill
-\noindent This manual has been compiled based \> \\on the \ogs Data Explorer 5.2.03 \> \\(released on 01 September 2011). \> \\
+\noindent This manual has been compiled based \> \\on the \ogs Data Explorer 5.2.07 \> \\(released on 15 December 2011). \> \\
 \> \\
 \noindent Many thanks to Lars Bilke and Thomas \> \\ Fischer and everyone else helping with \> \\ the development of the software. \> \\
 \end{tabbing}
@@ -113,6 +116,12 @@
 \include{ch04-visualisation}
 
 \appendix
+
+\cleardoublepage
+\addcontentsline{toc}{chapter}{Index}
+\printindex
+
+\cleardoublepage
 \include{app-literature}
 
 \cleardoublepage
