Added lisence information and fixed some typos

--- a/ch02-workflow.tex
+++ b/ch02-workflow.tex
@@ -81,7 +81,7 @@ Technically, data (or a representation thereof) loaded into the programme is dis
 \subsection{Data Views}
 \index{DataView}
 
-There are four different DataView-Tabs in the programme where the data is visible in the form of lists. Which of the tabs is used depends on the data. There is one tab for geometrical information, one for meshes, one for stations (i.e. observation sites) and one for Modelling information (i.e. processes, boundary conditions, etc.)
+There are four different DataView-Tabs in the programme where the data is visible in the form of lists. Which of the tabs is used depends on the data. There is one tab for geometrical information, one for meshes, one for stations (i.e. observation sites) and one for modelling information (i.e. processes, boundary conditions, etc.)
 
 The DataView for geometrical information contains a list of geometries. Each geometry-item has up to three children titled ``Points'', ``Polylines'' and ``Surfaces'' containing the information about the respective geometrical objects. For example, the item `Points' contains a list of points and for each item (i.e. each point) its index, the coordinates and (if existing) the name of the object can be displayed. Each geometry \emph{needs} to contain a list of points. Other geometrical objects (i.e. polylines or surfaces) are optional. Upon selecting a geometrical object in the DataView, the object will also be highlighted\index{Highlighting objects} in the render window. For better visibility a point will be marked by a small ball, a line by a tube.
 
