--- a/ch04-visualisation.tex
+++ b/ch04-visualisation.tex
@@ -1,7 +1,7 @@
 \chapter{Visualisation}
 
 \section{Visualisation Properties}
-\index{Visualisation setttings}
+\index{Visualisation settings}
 
 You can change some properties of the render window by clicking \cmd{Settings\ra} \cmd{Visualisation Settings...}. The dialog that opens allows you to change the background colour of the render window as well as some small changes concerning the illumination of the scene.
 
@@ -156,7 +156,7 @@ All available filters will be detailed in the following.
 \bstart{Effect:} A geometric line has independent of the current zoom level always a thickness of $1$. This filter allows to assign a `real' thickness to line-objects that also changes according to the current zoom. See figure \ref{Filter-Poly3}.
 
 \subsubsection{Points to spheres}
-\index{Sphere filter}\index{Glyph ilter}
+\index{Sphere filter}\index{Glyph Filter}
 \bstart{Applicable to:} Geometry, Observation sites
 
 \bstart{Effect:} A geometric point has independent of the current zoom level always a diameter of $1$. This filter allows to assign a `real' diameter to point-objects that also changes according to the current zoom. See figure \ref{Filter-Poly2}.
