--- a/ch03-funcindex.tex
+++ b/ch03-funcindex.tex
@@ -26,7 +26,7 @@ This function additionally creates a new surface by triangulating the polygon. T
 \section{Creating Processes}
 \index{Creating processes}
 
-It is possible to add processes to the workflow in the modelling-tab by pressing the \cmd{Add process...}-button. A dialog will open that allows to select a process type and an associated primary variable. As of version 5.2.07 this has no effect except for boundary conditions being grouped under these processes and being removed upon removing the process (via right-click \cmd{Remove process}).
+It is possible to add processes to the workflow in the Modelling-tab by pressing the \cmd{Add process...}-button. A dialog will open that allows to select a process type and an associated primary variable. As of version 5.2.07 this has no effect except for boundary conditions being grouped under these processes and being removed upon removing the process (via right-click \cmd{Remove process}).
 
 \section{Creating FEM Conditions}
 \index{Creating FEM conditions}
@@ -77,7 +77,7 @@ Default parameters for all options are already predefined and have worked well w
 \subfloat[Elevation]{\includegraphics[width=0.3\linewidth]{rastermesh2}\label{rastermesh2}}\enspace
 \subfloat[Materials]{\includegraphics[width=0.3\linewidth]{rastermesh3}\label{rastermesh3}}
 \end{center}
-\caption{Creating meshes from raster files: Pixels can be either represented as a set of two triangles (Fig. \ref{rastermesh2}) or a square (Fig. \ref{rastermesh3}), intensities may represent elevation (Fig. \ref{rastermesh2}) or materials (Fig. \ref{rastermesh3}).} 
+\caption{Creating meshes from raster files: Pixels can be either represented as a set of two triangles (Fig. \ref{rastermesh2}) or a square (Fig. \ref{rastermesh3}), intensities may represent elevation (Fig. \ref{rastermesh2}) or materials (Fig. \ref{rastermesh3}).}
 \label{fig:rastermesh}
 \end{figure}
 
