--- a/ogsde-man.tex
+++ b/ogsde-man.tex
@@ -90,13 +90,18 @@
 \maketitle
 \newpage
 
-\vspace*{16cm}
+\vspace*{12cm}
 \begin{tabbing}
-
-\hspace*{14cm}\=aa\kill
-\noindent This manual has been compiled based \> \\on the \ogs Data Explorer 5.2.07 \> \\(released on 15 December 2011). \> \\
+\hspace*{6cm}\=aa\kill
+\begin{minipage}[t]{0.62\textwidth}
+\noindent This manual has been compiled based on the \ogs Data Explorer 5.2.07 \\
+(released on 15 December 2011).\\
+\\
+This document as well as its sources are published under Creative Commons Attribution-Noncommercial-Share Alike 3.0 Un\-por\-ted License. For more information go to \url{http://creativecommons.org/licenses/by-nc-sa/3.0/}. \\
+\\
+\noindent Special thanks to Lars Bilke and Thomas Fischer and everyone else helping with the development of the software.
+\end{minipage}
 \> \\
-\noindent Many thanks to Lars Bilke and Thomas \> \\ Fischer and everyone else helping with \> \\ the development of the software. \> \\
 \end{tabbing}
 
 \newpage
