Added doc for backface culling.

--- a/ch04-visualisation.tex
+++ b/ch04-visualisation.tex
@@ -11,6 +11,8 @@ A global superelevation\index{Superelevation} factor can be applied to all root 
 
 Per default on loading new data the 3D view is adapted to show the entire scene. This can be switched of by unchecking the ``Reset view on load'' option. This might be useful when making a series of screenshots with the exact same point of view.
 
+You can enable the option \textbf{Cull backfaces}\index{Backface culling} to only render the 3d primitives (e.g. triangles, quads) which normals point towards the view. This improves rendering speed and may also be useful for finding false ordered primitives.
+
 \section{General Visualisation Options}
 \label{genvisoptions}
 
